--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -34,7 +34,7 @@
 <body style="background:url();">
   <nav class="navbar navbar-expand-lg  navbar-light bg-dark ">
     <div class="container">
-      <a href="/" class="navbar-brand" style="margin-left:-46%;"><img src="https://i.imgur.com/9P17nVK.png" height="75px"
+      <a href="/" class="navbar-brand" style="margin-left:-50%;"><img src="{%static 'app/images/banner/logo_MyPharma.png'%}" height="100px"
           width="250px"></a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
