--- a/app/templates/app/addtocart.html
+++ b/app/templates/app/addtocart.html
@@ -49,11 +49,11 @@
       <h3>The Total Amount of</h3>
       <ul class="list-group">
        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>A$. <span id="amount">{{amount|floatformat:2}}</span> </span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>A$. 70.00</span></li>
+       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>A$. 10.00</span></li>
        <hr>
        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
         <div>
-           <strong>Total</strong> <small>(including VAT)</small>
+           <strong>Total</strong> <small>(including All Tax)</small>
          </div>
          <span><strong>Rs. </strong><strong id="totalamount"> {{totalamount|floatformat:2}}</strong></span>
        </li>
