--- a/app/templates/app/address.html
+++ b/app/templates/app/address.html
@@ -22,7 +22,7 @@
        <p>Locality: {{ad.locality}}</p>
        <p>City: {{ad.city}}</p>
        <p>State: {{ad.state}}</p>
-       <p>Pin Code: {{ad.zipcode}}</p>
+       <p>Zip Code: {{ad.zipcode}}</p>
       </div>
      </div>
     </div>
