--- a/app/templates/app/Contact.html
+++ b/app/templates/app/Contact.html
@@ -22,73 +22,75 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'app/contact/css/main.css'%}">
 <!--===============================================================================================-->
 </head>
-<nav class="navbar navbar-expand-lg  navbar-light bg-dark " style="color: black;">
-    <div class="container">
-      <a href="/" class="navbar-brand" style="margin-left:-20%;"><img src="https://i.imgur.com/9P17nVK.png" height="75px"
-          width="250px"></a>
-      <!--a class="navbar-brand a2" href="/"  class="a2">MyPharma</a-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 b1" style="color:rgb(0, 0, 0);">
-          <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="{% url 'home' %}" style="color:white;">Home</a>
+<nav class="navbar navbar-expand-lg  navbar-light bg-dark ">
+  <div class="container">
+    <a href="/" class="navbar-brand" style="margin-left:-50%;"><img src="{%static 'app/images/banner/logo_MyPharma.png'%}" height="100px"
+        width="250px"></a>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 b1" style="color:rgb(0, 0, 0);">
+        <li class="nav-item">
+          <a class="nav-link active " aria-current="page" href="{% url 'home' %}" style="color:white;">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active " aria-current="page" href="{% url 'contact' %}" style="color:white;">Contact</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="electronicsDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Categories
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="electronicsDropdown">
+            <li><a class="dropdown-item" href="{% url 'pdrug' %}" style="color:rgb(0, 0, 0);">Prescribed Drugs</a>
+            </li>
+            <li><a class="dropdown-item" href="{% url 'suppli' %}">Suppliments</a></li>
+             <li><a class=" dropdown-item" href="{% url 'supply' %}">Medical Supplies</a></li>
+            </ul>
+         </li>
+      </ul>
+      <div style="margin-left:12%;">
+      <form method="get" action="{%url 'search'%}" class="d-flex" >
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
+        <button style="margin-left:10px;" class="btn btn-warning" type="submit"><img src="{%static 'app/images/search icon.png'%}"></button>
+      </form>
+      </div>
+      <div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if request.user.is_authenticated %}
+          <li class="nav-item dropdown mx-2">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              {{request.user.username|capfirst}}
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="profileDropdown">
+              <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'orders' %}">Orders</a></li>
+              <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Change Password</a></li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="{% url 'contact' %}" style="color:white;">Contact</a>
+          <li class="nav-item mx-2">
+            <a href="{% url 'showcart' %}" class="nav-link text-white"><span
+                class="badge bg-danger">{{totalitem}}</span> Cart </a>
           </li>
-          <li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle text-white" href="#" id="electronicsDropdown" role="button"
-					data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
-				<ul class="dropdown-menu" aria-labelledby="electronicsDropdown">
-					<li><a class="dropdown-item" href="{% url 'pdrug' %}" style="color:rgb(0, 0, 0);">Prescribed Drugs</a>
-					</li>
-					<li><a class="dropdown-item" href="{% url 'suppli' %}"">Suppliments</a></li>
-				<li><a class=" dropdown-item" href="{% url 'supply' %}"">Medical Supplies</a></li>
-				</ul>
-           </li>
+          {% else %}
+          <li class="nav-item mx-2">
+            <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
+          </li>
+          <li class="nav-item mx-2">
+            <a href="{% url 'customerregistration' %}" class="nav-link text-white">Registration</a>
+          </li>
+          {% endif %}
         </ul>
-        <div style="margin-left:22%;">
-        <form method="get" action="{%url 'search'%}" class="d-flex" >
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
-          <button style="margin-left:10px;" class="btn btn-warning" type="submit"><img src="{%static 'app/images/search icon.png'%}"></button>
-        </form>
-        </div>
-        <div>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if request.user.is_authenticated %}
-            <li class="nav-item dropdown mx-2">
-              <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                {{request.user.username|capfirst}}
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                <li><a class="dropdown-item" href="{% url 'orders' %}">Orders</a></li>
-                <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Change Password</a></li>
-                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mx-2">
-              <a href="{% url 'showcart' %}" class="nav-link text-white"><span
-                  class="badge bg-danger">{{totalitem}}</span> Cart </a>
-            </li>
-            {% else %}
-            <li class="nav-item mx-2">
-              <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
-            </li>
-            <li class="nav-item mx-2">
-              <a href="{% url 'customerregistration' %}" class="nav-link text-white">Registration</a>
-            </li>
-            {% endif %}
-          </ul>
-          </div>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 <body>
 
 	<div class="bg-contact100" style="background-color: black;">
@@ -133,7 +135,8 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+	<div class="container-dark pb-0 mb-0 justify-content-center text-dark ">
+    <footer class="a1">
         <div class="row my-5 justify-content-center py-5">
             <div class="col-11">
                 <div class="row ">
@@ -144,15 +147,15 @@
                         <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
                         <ul class="list-unstyled">
                           <a href="{% url 'home' %}" style="text-decoration: none" >  <li>Home</li> </a>
-                          <a href="#" style="text-decoration: none" >  <li>About</li> </a>
                           <a href="{% url 'contact' %}" style="text-decoration: none" >  <li>Contact Us</li> </a>
                           <a href="{% url 'login' %}" style="text-decoration: none" >  <li>Login</li> </a>
+                          <a href="{% url 'customerregistration'%}" style="text-decoration: none" >  <li>Register</li> </a>
                         </ul>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
                         <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5"><b>ADDRESS</b></h6>
-                        <a href="https://www.google.com/maps/place/Guru+Nanak+Dev+University,+Regional+Campus,+Jalandhar/@31.333588,75.6215062,17z/data=!3m1!4b1!4m5!3m4!1s0x391a598afff01ab1:0x4d676314655e801!8m2!3d31.333588!4d75.6236949"> <p class="mb-1">Guru Nanak Dev University, Regional Campus,</p>
-                        <p>Jalandhar</p></a>
+                        <a href="https://goo.gl/maps/7XqhkFg4pvx6nbMNA"> <p class="mb-1">34, Laurel Crescent, Parafield Gardens SA 5107</p>
+                        <p>Adelaide</p></a>
                     </div>
                 </div>
                 <div class="row ">
@@ -163,18 +166,19 @@
                           <a href="https://www.facebook.com/"><span class="mx-2"><i class="fab fa-twitter-square"></i></span></a>
                           <a href="https://www.facebook.com/"><span class="mx-2"><i class="fab fa-instagram"></i></span></a>
                         </p>
-                      <small class="rights"><span>&#174;</span> MyPharma Pvt Ltd</small>
+                      <small class="rights"><span>&#174;</span> MyPharma All Rights Reserved.</small>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end ">
-                        <h6 class="mt-55 mt-2 text-muted bold-text"><b>ARCHIT</b></h6><small> <span><i class="fa fa-envelope" aria-hidden="true"></i></span> asr16661@gmail.com</small>
+                        <h6 class="mt-55 mt-2 text-muted bold-text"><b>JIGAR CHOVATIYA</b></h6><small> <span><i class="fa fa-envelope" aria-hidden="true"></i></span> jigarc1619@gmail.com</small>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3 ">
-                        <h6 class="text-muted bold-text"><b>MyPharma Support</b></h6><small><span><i class="fa fa-envelope" aria-hidden="true"></i></span>email </small>
+                        <h6 class="text-muted bold-text"><b>MYPHARMA SUPPORT</b></h6><small><span><i class="fa fa-envelope" aria-hidden="true"></i></span>supportformypharma@gmail.com </small>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+</div>
 </div>
 
  
