--- a/app/templates/app/addtocart.html
+++ b/app/templates/app/addtocart.html
@@ -55,7 +55,7 @@
         <div>
            <strong>Total</strong> <small>(including All Tax)</small>
          </div>
-         <span><strong>Rs. </strong><strong id="totalamount"> {{totalamount|floatformat:2}}</strong></span>
+         <span><strong>A$ </strong><strong id="totalamount"> {{totalamount|floatformat:2}}</strong></span>
        </li>
       </ul>
       <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-danger fw-bold">Place Order</a></div>
