--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -30,7 +30,7 @@
                     <div class="item">
                      <img src="{{product.product_image.url}}" alt="" width="500"  class="">
                      <div class="fw-bold">{{product.title}}</div>
-                     <div class="fw-bold">Rs. {{product.discounted_price}} <small class="fw-light text-decoration-line-through">{{product.selling_price}}</small></div>
+                     <div class="fw-bold">A$ {{product.discounted_price}} <small class="fw-light text-decoration-line-through">{{product.selling_price}}</small></div>
                     </div>
                    </a>
                   </div>
@@ -38,7 +38,7 @@
                 </div>
                </div>
             {% else %}
-            <h1>No Search Results Found!</h1>
+            <h1>Sorry! No Search Results Found!</h1>
             {% endif %}
 
             {% endif %}
